# Snudda

./: .buildconfig  .gitignore  .readthedocs.yaml  Beskow_runSynapseCalibrate.job  Beskow_simulate.job  Centres.txt  CreateCubeMesh.py  CreateSliceMesh.py  MANIFEST.in  NEURONs.txt  Network_plot_spike_raster.py  Network_plot_spike_raster_updated.py  Network_plot_traces.py  Network_simulate_beskow_v5_2019.job  Neuron_model.py  Neuron_model_extended.py  Neuron_morphology.py  NrnSimulatorParallel.py  README.md  RegionMesh.py  TODO.txt  Tegner_runSnudda.job  Tegner_runSnudda.sh  Tegner_setupInput.job  Tegner_setupInputSerial.job  Tegner_simulate.job  app.py  app_get_connectivity.py  app_set.py  codecov.yml  codemeta.json  mechanisms  morph_lib_creator.py  parallel_coordinates.py  plot_depolBlock.py  pyproject.toml  requirements.txt  runSnuddaCalibrateSynapses.sh  runSnuddaCalibrateSynapsesLTS.sh  runSnuddaSmall.sh  (+18 more)
.github/workflows/: ebrains.yml  pythonapp.yml
Blender/io_mesh_swc/: __init__.py
Blender/visualisation/: makeNeuronCube.py  visualiseTouchDetection.py
DATA/: LTS-nearest-neighbour-points-Sabatini2016.csv
SynapticFitting/: OptimiseSynapses.py  OptimiseSynapsesPlanert.py  Planert2010.py  Planert2010part2.py  filterJSON.py  optimiseAll.sh  runPlanert2010.sh
config/: input-tinytest-v2.json  input-tinytest-v4.json  input-tinytest.json
docs/: api.rst  conf.py  detect.rst  index.rst  init.rst  input.rst  make.bat  neurons.rst  place.rst  requirements.txt  simulate.rst  utils.rst
examples/: Tegner_runSnudda.sh  Tegner_runSnuddaPopUnit.sh  data_versions.txt  parkinsonGenerateNetwork.sh  parkinsonGenerateNetworkHenri.sh  runSnuddaSmall.sh
new_config/: chin.json  dspn.json  fs.json  ispn.json  lts.json  network.json  pop1.json  striatum-connectivity.json  striatum.json
snudda/: CreateCubeMesh.py  Neuron_model.py  Neuron_model_extended.py  Neuron_morphology.py  RegionMesh.py  __init__.py  analyse.py  analyse_neuroinformatics2020.py  analyse_striatum.py  calibrate_synapses.py  cli.py  connect.py  convert_units.json  core.py  create_cube_mesh.py  create_slice_mesh.py  cut.py  detect.py  export_connection_matrix.py  help.py  init.py  init_custom.py  init_wojtek.py  input.py  inspectinput.py  load.py  model_current_injections.py  modulation.py  neuroinformatics.log.txt  neuromodulation.py  neuron_model_extended.py  neuron_morphology.py  place.py  project.py  prune.py  region_mesh.py  rotation.py  simulate.py  snudda_analyse.py  snudda_calibrate_synapses.py  (+11 more)
synapses/: M1_Analysis_RH_extr_UP.pxp-traceList-MSND1-require-H20-model-parameters.json  trace_table.txt-FD-model-parameters.json
tests/: ach  da  da_ach  mechanisms  mechanisms_ptr  test_000_setup.py  test_ablate.py  test_bend_morphologies.py  test_cli.py  test_clustered_pruning.py  test_degeneration.py  test_detect.py  test_detect_cluster.py  test_detect_voxel_count.py  test_dump.py  test_firsttest.py  test_init.py  test_input.py  test_input_lognormal.py  test_load.py  test_modify_network.py  test_neuromodulation.py  test_neuromodulation_adaptive.py  test_neuromodulation_adaptive_ach.py  test_neuromodulation_adaptive_da.py  test_neuromodulation_replay.py  test_neuron_modulation.py  test_neuron_morphology.py  test_neuron_prototype.py  test_pair_recording.py  test_place.py  test_place_density.py  test_project.py  test_projection_detection.py  test_prune.py  test_region_mesh.py  test_rotation.py  test_save_network_recording.py  test_segmentid.py  test_snudda_path.py  (+2 more)
validation/: validate_single_model.py
x86_64/: Kv3_ch.c  Kv3_ch.lo  Kv3_ch.mod  bk_ch.c  bk_ch.lo  bk_ch.mod  bk_fs.c  bk_fs.lo  bk_fs.mod  bk_ms.c  bk_ms.lo  bk_ms.mod  ca_ch.c  ca_ch.lo  ca_ch.mod  cadyn_fs.c  cadyn_fs.lo  cadyn_fs.mod  cadyn_ms.c  cadyn_ms.lo  cadyn_ms.mod  cal12_ms.c  cal12_ms.lo  cal12_ms.mod  cal13_ms.c  cal13_ms.lo  cal13_ms.mod  cal_ch.c  cal_ch.lo  cal_ch.mod  caldyn_ms.c  caldyn_ms.lo  caldyn_ms.mod  can_fs.c  can_fs.lo  can_fs.mod  can_ms.c  can_ms.lo  can_ms.mod  cap_ch.c  (+116 more)
(+5136 files in other folders)
