[build-system]
requires = ["setuptools>=61", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "snudda"
version = "2.2.6.2"
description = "Create realistic networks of neurons, synapses placed using touch detection between axons and dendrites."
authors = [{ name = "Johannes Hjorth", email = "hjorth@kth.se" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPLv3" }
requires-python = ">=3.11"

dependencies = [
    "bluepyopt>=1.14.18",
    "h5py>=3.13",
    "ipyparallel>=9.0.1",
    "matplotlib>=3.9.4",
    "mpi4py>=4.0.3",
    "numpy>=2.2.3", 
    "scipy>=1.16.2",
    "psutil >= 7.0.0",
    "numexpr>=2.10.2",
    "numba>=0.60.0",
    "wheel",
    "vedo"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = ["sphinx"]

[project.scripts]
snudda = "snudda.cli:snudda_cli"
snudda_load = "snudda.utils.load:snudda_load_cli"
snudda_load_simulation_data = "snudda.utils.load_network_simulation:load_network_simulation_cli"
snudda_ablate_network = "snudda.utils.ablate_network:snudda_ablate_network_cli"
snudda_plot_network = "snudda.plotting.plot_network:snudda_plot_network_cli"
snudda_plot_trace = "snudda.plotting.plot_traces:snudda_plot_traces_cli"
snudda_create_cube_mesh = "snudda.place.create_cube_mesh:cube_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["snudda*"]
